--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   color: rgb(83, 66, 66);
+  font-family: "Courier New", Courier, monospace;
   /* overflow-x: hidden; */
 }
 
@@ -39,6 +40,7 @@ html {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
 
 .logo {
   width: 13%;
@@ -88,9 +90,9 @@ html {
 
 .nav-list li a {
   text-decoration: none;
-  color: white;
+  color: #553535;
   font-size: 20px;
-  font-family: "Ceviche One", cursive;
+    font-family: "Courier New", Courier, monospace;
 }
 .nav-list li a:hover {
   text-decoration: none;
@@ -98,9 +100,9 @@ html {
 }
 .right-nav-list li a {
   text-decoration: none;
-  color: white;
+  color: #553535;
   font-size: 20px;
-  font-family: "Ceviche One", cursive;
+    font-family: "Courier New", Courier, monospace;
 }
 .right-nav-list li a:hover {
   text-decoration: none;
@@ -195,12 +197,13 @@ html {
   border-radius: 10px;
   font-size: 18px;
   background: none;
-  color: white;
+  color: #553535;
 }
 
 .btn:hover {
   background-color: rgba(0, 0, 0, 0.527);
   cursor: pointer;
+  color: white;
 }
 
 .btn-sm {
@@ -370,3 +373,28 @@ html {
   font-family: "Courier New", Courier, monospace;
   color: white;
 }
+
+.hide{
+  display: none;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 2vw;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
